--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,6 @@ jobs:
 
       - name: Sync S3 bucket
         run: |
-          aws s3 sync . s3://ustabisyor-web-page --delete
+          aws s3 sync . s3://ustabisyor-web-page --exclude ".git/"
         env:
           S3_BUCKET: ${{ secrets.S3_BUCKET }}
